Bug 425934 - Cannot rename new currency
Summary: Cannot rename new currency
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 426507 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-08-29 09:09 UTC by Ian Neal
Modified: 2020-09-14 06:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2020-08-29 09:09:25 UTC
SUMMARY
When you create a new currency it is always called new currency even if you try to rename it.

STEPS TO REPRODUCE
1. Create a new currency using context menu in currencies dialog
2. Right click New currency and select "Rename currency"
3. Enter new name and close currencies dialog
4. Reopen currencies and look for your new currency

OBSERVED RESULT
1. New currency is still called "New currency"

EXPECTED RESULT
1. New currency is called what it was renamed to.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora 31
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2020-09-12 14:20:39 UTC
Git commit 61a8e7bd5243fd38bb44528c8766b47f490f1000 by Thomas Baumgart.
Committed on 12/09/2020 at 14:15.
Pushed by tbaumgart into branch 'master'.

Allow to rename a currency and assign it a different symbol

M  +10   -14   kmymoney/dialogs/kcurrencyeditdlg.cpp

https://invent.kde.org/office/kmymoney/commit/61a8e7bd5243fd38bb44528c8766b47f490f1000
Comment 2 Thomas Baumgart 2020-09-12 14:20:53 UTC
Git commit 8be42517cc7a1a47d4b8c4e3b2a433c68ca8d2e2 by Thomas Baumgart.
Committed on 12/09/2020 at 14:20.
Pushed by tbaumgart into branch '5.1'.

Allow to rename a currency and assign it a different symbol
FIXED-IN: 5.1.1

(cherry picked from commit 61a8e7bd5243fd38bb44528c8766b47f490f1000)

M  +10   -14   kmymoney/dialogs/kcurrencyeditdlg.cpp

https://invent.kde.org/office/kmymoney/commit/8be42517cc7a1a47d4b8c4e3b2a433c68ca8d2e2
Comment 3 Thomas Baumgart 2020-09-14 06:47:08 UTC
*** Bug 426507 has been marked as a duplicate of this bug. ***