Allow to rename a currency and assign it a different symbol

BUG: 425934